Fix overflow issue

--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,4 +1,6 @@
 .main {
+  height: 100%;
   background: #eee;
   padding: 15px 25px;
+  margin-left: 200px;
 }
