--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -1,4 +1,7 @@
 .menu {
   background: #fff;
   border-right: 3px solid #625D5D;
+  position: fixed;
+  height: 100%;
+  width: 200px;
 }
